[package]
name = "powertools-lambda-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
log = "0.4.19"
readonly = "0.2.11"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
